static/css/custom.css
/* Custom */
body {
  padding-top: 50px;
  background-color: #000;
}

footer {
  padding: 20px 0;
}

#navbar {
  background-color: #000;
}

#intro-header {
  padding-top: 50px;
  padding-bottom: 50px;
  text-align: center;
  background: url(/static/img/header.jpg) no-repeat center;
  background-size: cover;
  color: #fff;
}

#footer {
  background-color: #000;
}

#footer p {
  color: #9D9D9D;
}

.intro-message {
  position: relative;
  padding-top: 20%;
  padding-bottom: 20%;
}

.link a {
  color: #9D9D9D;
  text-decoration: none;
}

.link a:hover {
  color: #fff;
  text-decoration: none;
}

.sections {
  color: #fff;
}

.sections button {
  color: #000;
}

